--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resume",
+  "name": "gatsby-starter-linkedin-resume",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/EmaSuriano/resume.git",
