fix schema issue

--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "postinstall": "yarn generate-validators",
     "start": "yarn build && gatsby serve",
-    "build": "tsc -p . && gatsby build",
+    "build": "yarn generate-validators && tsc -p . && gatsby build",
     "generate-resume": "ts-node --files src",
     "generate-validators": "typescript-json-validator src/types/LinkedInSchema.ts LinkedInSchema & typescript-json-validator src/types/JsonResumeSchema.ts JsonResumeSchema",
     "type-check": "tsc -p . --noEmit",
