add new command

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "yarn build && gatsby serve",
     "build": "yarn generate-validators && tsc -p . && gatsby build",
+    "build:generate": "yarn generate-resume --renew && yarn build",
     "generate-resume": "ts-node --files src",
     "generate-validators": "typescript-json-validator src/types/LinkedInSchema.ts LinkedInSchema & typescript-json-validator src/types/JsonResumeSchema.ts JsonResumeSchema",
     "type-check": "tsc -p . --noEmit",
