--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-meta-redirect": "^1.1.1",
     "gatsby-theme-jsonresume": "^1.0.6",
     "jsonresume-theme-standard-resume": "^1.2.1",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
