--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mermaid-js/mermaid-cli": "^8.4.8",
     "@types/inquirer": "^6.5.0",
     "@types/node": "^13.13.1",
+    "@types/node-fetch": "^2.5.7",
     "@types/progress": "^2.0.3",
     "chalk": "^4.0.0",
     "commander": "^5.0.0",
