adding prebuild script

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "scripts": {
     "start": "yarn build && gatsby serve",
+    "prebuild": "node get-external-sources",
     "build": "yarn generate-validators && tsc -p . && gatsby build",
-    "build:generate": "yarn generate-resume --renew && yarn build",
     "generate-resume": "ts-node --files src",
     "postinstall": "yarn generate-validators",
     "generate-validators": "typescript-json-validator src/types/LinkedInSchema.ts LinkedInSchema & typescript-json-validator src/types/JsonResumeSchema.ts JsonResumeSchema",
