--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "scripts": {
     "start": "yarn build && gatsby serve",
-    "prebuild": "node get-external-sources",
-    "build": "yarn generate-validators && tsc -p . && gatsby build",
+    "prebuild": "yarn generate-validators && tsc -p . && node get-external-sources",
+    "build": "gatsby build",
     "generate-resume": "ts-node --files src",
     "postinstall": "yarn generate-validators",
     "generate-validators": "typescript-json-validator src/types/LinkedInSchema.ts LinkedInSchema & typescript-json-validator src/types/JsonResumeSchema.ts JsonResumeSchema",
