adding test to external resume" gs " gst

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ install:
   - yarn --frozen-lockfile --ignore-engines
 
 script:
-  - yarn generate-resume
+  - yarn type-check
+  - yarn test
   - yarn build
