--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
   },
   "scripts": {
     "start": "yarn build && gatsby serve",
-    "prebuild": "yarn generate-validators && tsc -p . && node get-external-sources",
+    "prebuild": "yarn generate-validators && tsc -p .",
     "build": "gatsby build",
+    "build:external": "yarn external-resume && yarn build",
+    "external-resume": "ts-node --files src/external-resume",
     "generate-resume": "ts-node --files src",
     "postinstall": "yarn generate-validators",
     "generate-validators": "typescript-json-validator src/types/LinkedInSchema.ts LinkedInSchema & typescript-json-validator src/types/JsonResumeSchema.ts JsonResumeSchema",
     "type-check": "tsc -p . --noEmit",
+    "test": "jest",
     "docs": "mmdc -i docs/how-it-works.mmd -o docs/how-it-works.svg"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^8.4.8",
     "@types/inquirer": "^6.5.0",
+    "@types/jest": "^25.2.3",
     "@types/node": "^13.13.1",
     "@types/node-fetch": "^2.5.7",
     "@types/progress": "^2.0.3",
@@ -34,8 +38,11 @@
     "commander": "^5.0.0",
     "dotenv": "^8.2.0",
     "inquirer": "^7.1.0",
+    "jest": "^26.0.1",
+    "mock-fs": "^4.12.0",
     "progress": "^2.0.3",
     "scrapedin": "^1.0.16",
+    "ts-jest": "^26.1.0",
     "ts-node": "^8.9.0",
     "typescript": "^3.8.3",
     "typescript-json-validator": "^2.4.2"
