--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": [".cache/**/*"]
 }
